# mocktave

./: Cargo.toml  README.md  build.rs
.github/workflows/: tests.yml
examples/: all_the_types.rs  invert_matrix.rs  linalg.rs  primes.rs  primes1.rs  primes2.rs  top88.rs  top99.rs  wrapper.rs  wrapper1.rs  wrapper2.rs
src/: cookbook.rs  interpreter_results.rs  lib.rs  octave_types.rs  results.rs
