[package]
name = "mocktave"
version = "0.1.0"
edition = "2021"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Run Octave/MATLAB from Rust"
readme = "README.md"
repository = "https://github.com/cmccomb/mocktave"
homepage = "https://github.com/cmccomb/mocktave"
documentation = "https://docs.rs/mocktave"
license = "MIT OR Apache-2.0"
keywords = ["matlab", "octave", "interpeter"]
categories = ["parser-implementations"]


[dependencies]
bollard = {version="0.14.0", features = ["buildkit"]}
futures-util = "0.3.27"
tokio = { version = "1.7", features = ["fs", "rt-multi-thread", "macros"] }