[package]
name = "mocktave"
version = "0.1.2"
edition = "2021"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Run Octave/MATLAB from Rust"
readme = "README.md"
repository = "https://github.com/cmccomb/mocktave"
homepage = "https://github.com/cmccomb/mocktave"
documentation = "https://docs.rs/mocktave"
license = "MIT OR Apache-2.0"
keywords = ["matlab", "octave", "interpeter"]
categories = ["parser-implementations"]

[features]
default=["docker"]
docker = ["bollard", "futures-util", "tokio"]
brew = ["minreq", "serde_yaml", "decompress"]

[build-dependencies]
minreq = {version = ">=2.6.0", features = ["json-using-serde", "https"], optional=true}
serde_yaml = {version = ">=0.9.0", optional=true}
decompress = {version = ">=0.6.0", optional=true}

[dependencies]
bollard = {version=">=0.14.0", features = ["buildkit"], optional=true}
futures-util = {version = ">=0.3.0", optional=true}
human_regex = "0.3.0"
regex = ">=1.7.0"
tokio = {version = ">=1.7.0", optional=true}