[package]
name = "mocktave"
version = "0.1.5"
edition = "2021"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Run Octave/MATLAB inside Rust"
readme = "README.md"
repository = "https://github.com/cmccomb/mocktave"
homepage = "https://github.com/cmccomb/mocktave"
documentation = "https://docs.rs/mocktave"
license = "MIT OR Apache-2.0"
keywords = ["matlab", "octave", "scientific", "scripting", "scripting-language"]
categories = ["science", "development-tools::testing", "parser-implementations"]

[features]
default=["docker"]
docker = ["bollard", "futures-util", "tokio"]
#brew-src = ["minreq", "serde_yaml", "decompress"]
#brew-local = []

[build-dependencies]
minreq = {version = ">=2.13.0", features = ["json-using-serde", "https"], optional=true}
decompress = {version = ">=0.6.0", optional=true}

[dependencies]
bollard = {version=">=0.18.0", features = ["buildkit"], optional=true}
futures-util = {version = ">=0.3.0", optional=true}
human_regex = "0.3.0"
regex = ">=1.11.0"
tokio = { version = ">=1.42.0", optional = true, features = ["rt-multi-thread"] }
